2004-02-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkwindow.c: Gdk::Window#set_static_gravities raise 
	RuntimeError when it couldn't turn on static gravity. 
	* src/makedefconst.rb: Removed. It's never been used.

2004-02-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkproperty.c: Fix a warning.

2004-02-14  Vincent Isambart  <isambart@netcourrier.com>

	* src/makedefconst.rb, extconf.rb: replaced PLATFORM with RUBY_PLATFORM.

2004-02-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktextappearance.c: Add Gtk::TextAppearance.new.
	* src/rbgdkdisplay.c: Fix argument errors of Gdk::Display#put_event, 
	#set_double_click_time. Bugs item [892303].
	* sample/gtk-demo/main.rb: Don't show a warning message when 
	"Tree View" is choosed reported by gariele renzi.
	* src/rbgdkwindow.c: Fixed Gdk::Window#(set_)decorations, 
	#(set_)functions, #(set_)events reported by gabriele renzi. 
	* sample/testgtk/notebook.rb: Fixed bugs reported by gabriele renzi.
	* sample/misc/label.rb: Fix a warning repoted by gabriele renzi.
	* sample/misc/toolbar.rb: Fix a typo reported by gabriele renzi.
	* src/rbgtktextappearance.c: Add Gtk::TextAppearance.
	* src/rbgtktextattributes.c: Add all accessors.
	* src/gtk2.def, rbgtk.h: Add rbgtk_text_appearance_get_type.

2004-02-11  Dafydd Harries <daf@muse.19inch.net>

	* src/rbgtkcontainer.c: Add Gtk::Container#<< as an alias of #add.
	* src/rbgtktreepath.c, src/rbgtktreeiter.c: Add Gtk::TreePath#to_s,
	Gtk::TreeIter#to_s as aliases of #to_str.

2004-02-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktextattributes.c: Remove Gtk::TextAttributes#copy
	(Use Gtk::Boxed#copy instead).

2004-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtksettings.c: Add Gtk::Setting.rc_property_parse_*.
	* sample/misc/settings.rb: Added.

2004-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcontainer.c: Change arguments of Gtk::Container.install_child_property.
	* sample/misc/properties.rb: ditto.
	